@@ -57,6 +57,7 @@ Added
 
 - `:undo` now has a new `-w` / `--window` argument, which can be used to
   restore closed windows (rather than tabs). This is bound to `U` by default.
+- `:jseval` can now take `javascript:...` URLs via a new `--url` flag.
 - New replacement `{aligned_index}` for `tabs.title.format` and `format_pinned`
   which behaves like `{index}`, but space-pads the index based on the total
   numbers of tabs. This can be used to get aligned tab texts with vertical
